Finished build (hopefully)

--- a/Task2_Code_Barton_R/style.css
+++ b/Task2_Code_Barton_R/style.css
@@ -73,12 +73,14 @@ h1.temp {
 .weather.loading {
     visibility: hidden;
     max-height: 20px;
+    position: relative;
 }
 
 .weather.loading:after {
     visibility: visible;
     content: "Loading...";
     color: white;
+    position: absolute;
+    top: 0;
+    left: 20px;
 }
-
-35:05
