--- a/Task2_Code_Barton_R/style.css
+++ b/Task2_Code_Barton_R/style.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background: aqua;
+    background: black;
     background-image: url('https://source.unsplash.com/1600x900/?landscape');
     font-size: 120%;
 }
